# sourdough_bakery

./: Dockerfile  README.md  docker-compose.yml  manage.py  pshudocode.text  requirements.txt  sample_code_for_managing_security.py
autoremediatex-autoremediate-239075a211a6/: .gitignore  pyproject.toml
autoremediatex-autoremediate-239075a211a6/src/autoremediate/: check  cli.py
autoremediatex-autoremediate-239075a211a6/src/autoremediate/autoremediateflow/AutoFix/: AutoFix.py  defaults.yml
autoremediatex-autoremediate-239075a211a6/src/autoremediate/steps/CreatePR/: CreatePR.py
autoremediatex-autoremediate-239075a211a6/src/autoremediate/steps/PR/: PR.py
bakery_app/: apps.py  models.py  serializers.py  urls.py  views.py
sourdough_bakery/: asgi.py  settings.py  urls.py  wsgi.py
